fix: add flex-wrap

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -60,6 +60,7 @@
   &__container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 16px;
     margin: 0 0 30px;
 
